add saving to and reading from file, change layouts for input activity and about me activity

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -16,4 +16,8 @@
     <string name="myName">Szymon</string>
     <string name="mySurname">Woźniak</string>
     <string name="myFaceContentDescription">Moja twarz</string>
+    <string name="saveMenuItemText">Zapisz</string>
+    <string name="savedDataToFile">Pomyślnie zapisano dane do pliku.</string>
+    <string name="errorWhileLoadingFile">Coś poszło nie tak przy wczytywaniu pliku.</string>
+    <string name="errorWhileSavingFile">Coś poszło nie tak przy zapisywaniu pliku.</string>
 </resources>
